<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhySoSerious?</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="settings_general">General app settings:</string>
    <string name="settings_splash">Splash screen on startup</string>
    <string name="settings_randomize">Random joke on startup</string>
    <string name="settings_ellipsize">Ellipsize (&#8230;) long jokes</string>
    <string name="settings_categories">Use joke category in search:</string>
    <string name="settings_geek">Geek</string>
    <string name="settings_holiday">Holiday</string>
    <string name="settings_kids">Kids</string>
    <string name="settings_horror">Horror</string>
    <string name="settings_school">School</string>
    <string name="settings_update">Update</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_toggle_on">Yes</string>
    <string name="settings_toggle_off">No</string>
    <string name="about_team">Team Viking</string>
    <string name="about_author1">Christopher Reid</string>
    <string name="about_author2">Alessandro Rodi</string>
    <string name="about_author3">Sandro Victoria-Arena</string>
    <string name="addjoke_addjoke">Add Joke</string>
    <string name="addjoke_category">Category</string>
    <string name="addjoke_sub_category">Sub-Category</string>
    <string name="addjoke_short_desc">Joke Short Description</string>
    <string name="addjoke_short_question">Question (Type 1 Only)</string>
    <string name="addjoke_short_answer">Answer (Type 1 Only)</string>
    <string name="addjoke_short_monologue">Monologue Text (Type 2 Only)</string>
    <string name="addjoke_submit">Submit</string>
    <string name="addjoke_reset">Reset</string>
    <string name="addjoke_jokeType">Joke Type</string>
    <string name="editjoke">Update Joke</string>
    <string name="editjoke_category">Category</string>
    <string name="editjoke_sub_category">Sub-Category</string>
    <string name="editjoke_short_desc">Joke Short Description</string>
    <string name="editjoke_update">Update</string>
    <string name="editjoke_reset">Reset</string>
    <string name="editjoke_jokeType">Joke Type</string>
    <string name="searchjoke">Search Joke</string>
    <string name="searchjoke_category">Category</string>
    <string name="searchjoke_sub_category">Sub-Category</string>
    <string name="searchjoke_short_desc">Joke Short Description</string>
    <string name="searchjoke_short_question">Question (Type 1 Only)</string>
    <string name="searchjoke_short_answer">Answer (Type 1 Only)</string>
    <string name="searchjoke_short_monologue">Monologue Text (Type 2 Only)</string>
    <string name="searchjoke_search">Search</string>
    <string name="searchjoke_reset">Reset</string>
    <string name="searchjoke_jokeType">Joke Type</string>
    <string name="websearch">Web Search</string>
    <string name="websearch_category">Category</string>
    <string name="websearch_sub_category">Sub-Category</string>
    <string name="websearch_short_desc">Joke Short Description</string>
    <string name="websearch_search">Search</string>
    <string name="websearch_reset">Reset</string>
    <string name="websearch_jokeType">Joke Type</string>
    <string name="monologue_next_Line">Click to display next Line</string>
    <string name="monologueTopic">Monologue</string>
    <string name="monologue_add_to_dB_button">Add to SqLite DB</string>
    <string name="questionanswer_display_answer">Press to Display the Answer.</string>
    <string name="questionAndAnswerTopic">Question &amp; Answer</string>
    <string name="questionanswer_add_to_dB_button">Add to SqLite DB</string>
    <string name="imagejokeTopic">Image Joke</string>
    <string name="imagejokeDescription">Image Joke</string>
    <string name="imagejoke_add_to_dB_button">Add to SqLite DB</string>
    <string name="databasestatus_status">Database Status</string>
    <string name="databasestatus_first">First joke submitted:</string>
    <string name="databasestatus_last">Most recent joke submitted:</string>
    <string name="databasestatus_categories">Categories:</string>
    <string name="main_addjoke">Add Joke</string>
    <string name="main_dbstatus">DB Status</string>
    <string name="main_web">Web</string>
    <string name="main_search">Search</string>
    <string name="main_randomJokes">Show Random Jokes</string>
    <string name="geeklabel">Geek: </string>
    <string name="holidayLabel">Holiday: </string>
    <string name="kidsLabel">Kids: </string>
    <string name="horrorLabel">Horror: </string>
    <string name="schoolLabel">School: </string>
    <string name="title_activity_show_web_joke">ShowWebJokeActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
